--- a/static/css/sidebar.css
+++ b/static/css/sidebar.css
@@ -239,7 +239,7 @@ html.sidebar-open .sidebar li a .links_name {
 .sidebar li a:hover .links_name,
 .sidebar li a:hover i {
     transition: all 0.5s ease;
-    color: #00BCD4;
+    color: #2d7be1;
 }
 
 /* === TOOLTIP FOR CLOSED SIDEBAR === */
